--- a/docker/php-fpm/conf.d/customize.ini
+++ b/docker/php-fpm/conf.d/customize.ini
@@ -5,3 +5,5 @@ opcache.revalidate_freq=60
 opcache.fast_shutdown=1
 opcache.enable_cli=1
 opcache.enable=1
+opcache.jit=tracing
+opcache.jit_buffer_size=128M
