--- a/.github/workflows/phpmetrics-ci.yml
+++ b/.github/workflows/phpmetrics-ci.yml
@@ -34,16 +34,29 @@ jobs:
           php -d memory_limit=-1 ~/.composer/vendor/bin/phpmetrics \
             --config=phpmetrics.json
 
+#      - name: Extract targeted violations
+#        run: |
+#          if [[ -s ./phpmetrics-comment.txt ]]; then
+#            echo "PhpMetrics violations found"
+#          else
+#            echo "🎉 No PhpMetrics violations found" > ./phpmetrics-comment.txt
+#          fi
       - name: Extract targeted violations
         run: |
-          if [[ -s ./phpmetrics-comment.txt ]]; then
-            echo "PhpMetrics violations found"
-          else
-            echo "🎉 No PhpMetrics violations found" > ./phpmetrics-comment.txt
-          fi
+          FILES=$(git diff --name-only origin/${{ github.base_ref }} ${{ github.sha }})
+          echo "### 📝 Changed Files" > ./changed-files.txt
+          echo "" >> ./changed-files.txt
+          for FILE in $FILES; do
+            echo "- \`$FILE\`" >> ./changed-files.txt
+          done
 
       - name: Post PhpMetrics comment to PR
         if: github.event_name == 'pull_request'
         uses: marocchino/sticky-pull-request-comment@v2
         with:
-          path: ./phpmetrics-comment.txt
+          path: ./changed-files.txt
+#      - name: Post PhpMetrics comment to PR
+#        if: github.event_name == 'pull_request'
+#        uses: marocchino/sticky-pull-request-comment@v2
+#        with:
+#          path: ./phpmetrics-comment.txt
