--- a/.github/workflows/phpmetrics-ci.yml
+++ b/.github/workflows/phpmetrics-ci.yml
@@ -43,6 +43,19 @@ jobs:
         run: |
           mkdir -p ./tmp/phpmetrics
           php -d memory_limit=-1 ~/.composer/vendor/bin/phpmetrics \
+            --config=phpmetrics.json
+
+      - name: Extract targeted violations
+        run: |
+          if [[ -s ./phpmetrics-comment.txt ]]; then
+            echo "PhpMetrics violations found"
+          else
+            echo "🎉 No PhpMetrics violations found" > ./phpmetrics-comment.txt
+          fi
+      - name: Generate PhpMetrics Report
+        run: |
+          mkdir -p ./tmp/phpmetrics
+          php -d memory_limit=-1 ~/.composer/vendor/bin/phpmetrics \
             --config=phpmetrics-diff.json
 
       - name: Extract targeted violations
@@ -50,19 +63,18 @@ jobs:
           RULES=("Too complex class code" "Too complex method code")
           XPATH_RULES=""
           for RULE in "${RULES[@]}"; do
-            [[ -n "$XPATH_RULES" ]] && XPATH_RULES="${XPATH_RULES} or "
-            XPATH_RULES="${XPATH_RULES}@rule='${RULE}'"
+          [[ -n "$XPATH_RULES" ]] && XPATH_RULES="${XPATH_RULES} or "
+          XPATH_RULES="${XPATH_RULES}@rule='${RULE}'"
           done
-
           xmlstarlet sel -t \
-            -m "//file[violation[$XPATH_RULES]]" \
-            -v "concat('📄 ', @name)" -n \
-            -m "violation[$XPATH_RULES]" \
-            -v "concat('🔸 **', @rule, '** (priority ', @priority, ') at line ', @beginline)" -n \
-            -v "normalize-space(substring-before(., 'Maybe'))" -n \
-            -v "concat('- ', normalize-space(substring(., string-length(substring-before(., 'Maybe')) + 1)))" -n \
-            ./tmp/phpmetrics/violations.xml | \
-            sed 's/\* /- /g' > ./phpmetrics-comment.txt
+          -m "//file[violation[$XPATH_RULES]]" \
+          -v "concat('📄 ', @name)" -n \
+          -m "violation[$XPATH_RULES]" \
+          -v "concat('🔸 **', @rule, '** (priority ', @priority, ') at line ', @beginline)" -n \
+          -v "normalize-space(substring-before(., 'Maybe'))" -n \
+          -v "concat('- ', normalize-space(substring(., string-length(substring-before(., 'Maybe')) + 1)))" -n \
+          -n \
+          ./docs/phpmetrics/violations.xml > ./phpmetrics-comment.txt
 
           if [[ -s ./phpmetrics-comment.txt ]]; then
             echo "PhpMetrics violations found"
