--- a/.github/workflows/phpmetrics-ci.yml
+++ b/.github/workflows/phpmetrics-ci.yml
@@ -73,5 +73,5 @@ jobs:
         if: github.event_name == 'pull_request'
         uses: marocchino/sticky-pull-request-comment@v2
         with:
-          path: ./phpmetrics-diff.json
+          path: ./docs/phpmetrics/violations.xml
 #          path: ./phpmetrics-comment.txt
