--- a/.github/workflows/phpmetrics-ci.yml
+++ b/.github/workflows/phpmetrics-ci.yml
@@ -47,26 +47,30 @@ jobs:
 
       - name: Extract targeted violations
         run: |
-          RULES=("Too complex class code" "Too complex method code")
-          XPATH_RULES=""
-          for RULE in "${RULES[@]}"; do
-          [[ -n "$XPATH_RULES" ]] && XPATH_RULES="${XPATH_RULES} or "
-          XPATH_RULES="${XPATH_RULES}@rule='${RULE}'"
-          done
-          xmlstarlet sel -t \
-          -m "//file[violation[$XPATH_RULES]]" \
-          -v "concat('📄 ', @name)" -n \
-          -m "violation[$XPATH_RULES]" \
-          -v "concat('🔸 **', @rule, '** (priority ', @priority, ') at line ', @beginline)" -n \
-          -v "normalize-space(substring-before(., 'Maybe'))" -n \
-          -v "concat('- ', normalize-space(substring(., string-length(substring-before(., 'Maybe')) + 1)))" -n \
-          -n \
-          ./docs/phpmetrics/violations.xml > ./phpmetrics-comment.txt
-
-          if [[ -s ./phpmetrics-comment.txt ]]; then
-            echo "PhpMetrics violations found"
-          else
+          if [[ ! -f ./docs/phpmetrics/violations.xml ]]; then
             echo "🎉 No PhpMetrics violations found" > ./phpmetrics-comment.txt
+          else
+            RULES=("Too complex class code" "Too complex method code")
+            XPATH_RULES=""
+            for RULE in "${RULES[@]}"; do
+            [[ -n "$XPATH_RULES" ]] && XPATH_RULES="${XPATH_RULES} or "
+            XPATH_RULES="${XPATH_RULES}@rule='${RULE}'"
+            done
+            xmlstarlet sel -t \
+            -m "//file[violation[$XPATH_RULES]]" \
+            -v "concat('📄 ', @name)" -n \
+            -m "violation[$XPATH_RULES]" \
+            -v "concat('🔸 **', @rule, '** (priority ', @priority, ') at line ', @beginline)" -n \
+            -v "normalize-space(substring-before(., 'Maybe'))" -n \
+            -v "concat('- ', normalize-space(substring(., string-length(substring-before(., 'Maybe')) + 1)))" -n \
+            -n \
+            ./docs/phpmetrics/violations.xml > ./phpmetrics-comment.txt
+
+            if [[ -s ./phpmetrics-comment.txt ]]; then
+              echo "PhpMetrics violations found"
+            else
+              echo "🎉 No PhpMetrics violations found" > ./phpmetrics-comment.txt
+            fi
           fi
 
       - name: Post PhpMetrics comment to PR
