feat: 差分だけ取れているか８

--- a/.github/workflows/phpmetrics-ci.yml
+++ b/.github/workflows/phpmetrics-ci.yml
@@ -47,7 +47,8 @@ jobs:
 
       - name: Extract targeted violations
         run: |
-          if [[ ! -f ./docs/phpmetrics/violations.xml ]]; then
+          COUNT=$(xmlstarlet sel -t -v "count(//file/violation)" ./docs/phpmetrics/violations.xml)
+          if [[ "$COUNT" -eq 0 ]]; then
             echo "🎉 No PhpMetrics violations found" > ./phpmetrics-comment.txt
           else
             RULES=("Too complex class code" "Too complex method code")
@@ -66,9 +67,7 @@ jobs:
             -n \
             ./docs/phpmetrics/violations.xml > ./phpmetrics-comment.txt
 
-            if [[ -s ./phpmetrics-comment.txt ]]; then
-              echo "PhpMetrics violations found"
-            else
+            if [[ ! -s ./phpmetrics-comment.txt ]]; then
               echo "🎉 No PhpMetrics violations found" > ./phpmetrics-comment.txt
             fi
           fi
