--- a/.github/workflows/phpmetrics-ci.yml
+++ b/.github/workflows/phpmetrics-ci.yml
@@ -30,6 +30,7 @@ jobs:
       # 差分ファイルのみをチェックするために、設定ファイルを生成する
       - name: Generate PhpMetrics config for diff files
         run: |
+          echo "差分のうちModules配下のPHPファイルのみを取得"
           FILES=$(git diff --name-only origin/${{ github.base_ref }} ${{ github.sha }} | grep '^Modules/.*\.php$' || true)
           if [[ -z "$FILES" ]]; then
           echo "No PHP files changed. Skipping PhpMetrics."
